--- a/index.html
+++ b/index.html
@@ -10,33 +10,59 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster/dist/MarkerCluster.css" />
   <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster/dist/MarkerCluster.Default.css" />
 
-  <!-- Your custom styles -->
+  <!-- Google Fonts -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" />
+
+  <!-- FontAwesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" />
+
+  <!-- Animate.css -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
+  <!-- Custom CSS -->
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
   <!-- Header Section -->
-  <header>
-    <h1>DELHI-ZENITHS</h1>
-    <input type="text" id="locationSearch" placeholder="Search a location..." />
-    <button id="searchButton">Search</button>
+  <header class="bg-dark text-white p-3">
+    <div class="container">
+      <h1 class="mb-3">DELHI-ZENITHS</h1>
+      <div class="d-flex justify-content-center">
+        <input type="text" id="locationSearch" class="form-control me-2" placeholder="Search a location..." />
+        <button id="searchButton" class="btn btn-primary"><i class="fas fa-search"></i> Search</button>
+      </div>
+      <div class="mt-3 text-center">
+        <a href="form.html" class="btn btn-warning"><i class="fas fa-map-marker-alt"></i> Suggest Locations</a>
+      </div>
+    </div>
   </header>
 
   <!-- Map Container -->
-  <div id="map"></div>
+  <div id="map" class="animate__animated animate__fadeIn"></div>
 
   <!-- Footer Section with Zoom Controls -->
-  <footer>
-    <button id="zoomIn">Zoom In</button>
-    <button id="zoomOut">Zoom Out</button>
-    <button id="locateMe">Locate Me</button>
+  <footer class="bg-light text-center p-3">
+    <div class="container">
+      <div class="d-flex justify-content-center">
+        <button id="zoomIn" class="btn btn-success mx-2"><i class="fas fa-plus"></i> Zoom In</button>
+        <button id="zoomOut" class="btn btn-danger mx-2"><i class="fas fa-minus"></i> Zoom Out</button>
+        <button id="locateMe" class="btn btn-info mx-2"><i class="fas fa-location-arrow"></i> Locate Me</button>
+      </div>
+    </div>
   </footer>
 
   <!-- Leaflet JS -->
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script src="https://unpkg.com/leaflet.markercluster/dist/leaflet.markercluster.js"></script>
 
-  <!-- Your custom script -->
+  <!-- Bootstrap JS -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+
+  <!-- Custom JS -->
   <script src="script.js"></script>
 </body>
 </html>
