--- a/index.html
+++ b/index.html
@@ -31,24 +31,41 @@
 </head>
 <body>
 
-  <!-- Header Section -->
-  <header class="bg-dark text-white p-3">
-    <div class="container">
-      <h1 class="mb-3">DELHI-ZENITHS</h1>
-      <div class="d-flex justify-content-center">
-        <input type="text" id="locationSearch" class="form-control me-2" placeholder="Search a location..." />
-        <button id="searchButton" class="btn btn-primary"><i class="fas fa-search"></i> Search</button>
-      </div>
-      <div class="mt-3 text-center">
-        <button class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#suggestModal"><i class="fas fa-map-marker-alt"></i> Suggest Locations</button>
-        <button class="btn btn-light" data-bs-toggle="modal" data-bs-target="#loginModal"><i class="fas fa-sign-in-alt"></i> Login</button>
-        <button class="btn btn-light" data-bs-toggle="modal" data-bs-target="#signupModal"><i class="fas fa-user-plus"></i> Sign Up</button>
-        <div class="mt-2">
-          <button id="pointsButton" class="btn btn-info">Points: 0</button> <!-- Points button -->
+  <!-- Header Section with Navbar -->
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-3">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">DELHI-ZENITHS</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+          aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse mt-2 mt-lg-0" id="navbarNavDropdown">
+          <div class="d-flex align-items-center me-auto">
+            <input type="text" id="locationSearch" class="form-control me-2" placeholder="Search a location..." />
+            <button id="searchButton" class="btn btn-primary me-3"><i class="fas fa-search"></i> Search</button>
+          </div>
+          <ul class="navbar-nav align-items-center">
+            <li class="nav-item me-2">
+              <button class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#suggestModal"><i
+                  class="fas fa-map-marker-alt"></i> Suggest Locations</button>
+            </li>
+            <li class="nav-item me-2">
+              <button class="btn btn-light" data-bs-toggle="modal" data-bs-target="#loginModal"><i
+                  class="fas fa-sign-in-alt"></i> Login</button>
+            </li>
+            <li class="nav-item me-2">
+              <button class="btn btn-light" data-bs-toggle="modal" data-bs-target="#signupModal"><i
+                  class="fas fa-user-plus"></i> Sign Up</button>
+            </li>
+            <li class="nav-item">
+              <button id="pointsButton" class="btn btn-info">Points: 0</button>
+            </li>
+          </ul>
         </div>
       </div>
-    </div>
-  </header>  
+    </nav>
+  </header>
 
   <!-- Map Container -->
   <div id="map" class="animate__animated animate__fadeIn" style="height: 500px;"></div>
@@ -70,7 +87,8 @@
   </footer>
 
   <!-- Modal for Suggest Location Form -->
-  <div class="modal fade" id="suggestModal" tabindex="-1" role="dialog" aria-labelledby="suggestModalLabel" aria-hidden="true">
+  <div class="modal fade" id="suggestModal" tabindex="-1" role="dialog" aria-labelledby="suggestModalLabel"
+    aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
@@ -97,7 +115,7 @@
               <label for="description">Description</label>
               <textarea class="form-control" id="description" rows="3" required></textarea>
             </div>
-            <button type="submit" class="btn btn-success">Submit</button>
+            <button type="submit" class="btn btn-success mt-3">Submit</button>
           </form>
         </div>
       </div>
@@ -105,7 +123,8 @@
   </div>
 
   <!-- Modal for Login -->
-  <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel" aria-hidden="true">
+  <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel"
+    aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
@@ -124,7 +143,7 @@
               <label for="loginPassword">Password</label>
               <input type="password" class="form-control" id="loginPassword" required>
             </div>
-            <button type="submit" class="btn btn-primary">Login</button>
+            <button type="submit" class="btn btn-primary mt-3">Login</button>
           </form>
         </div>
       </div>
@@ -132,7 +151,8 @@
   </div>
 
   <!-- Modal for Sign Up -->
-  <div class="modal fade" id="signupModal" tabindex="-1" role="dialog" aria-labelledby="signupModalLabel" aria-hidden="true">
+  <div class="modal fade" id="signupModal" tabindex="-1" role="dialog" aria-labelledby="signupModalLabel"
+    aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
@@ -155,7 +175,7 @@
               <label for="signupPassword">Password</label>
               <input type="password" class="form-control" id="signupPassword" required>
             </div>
-            <button type="submit" class="btn btn-primary">Sign Up</button>
+            <button type="submit" class="btn btn-primary mt-3">Sign Up</button>
           </form>
         </div>
       </div>
@@ -172,6 +192,6 @@
 
   <!-- Custom JS -->
   <script src="script.js"></script>
-  
+
 </body>
 </html>
