--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <!-- FontAwesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
 
-  <!-- Tailwind CSS (from local build) -->
-  <link href="dist/output.css" rel="stylesheet">
+  <!-- Tailwind CSS (via CDN) -->
+  <script src="https://cdn.tailwindcss.com"></script>
 
   <!-- Animate.css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
@@ -29,7 +29,7 @@
 
   <!-- Bootstrap CSS -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet" />
-  
+
   <style>
     /* Custom Dark Theme Styles */
     body {
@@ -105,37 +105,35 @@
       border-color: #4A6C82;
     }
   </style>
-
 </head>
 <body class="font-roboto">
 
   <!-- Header Section with Dark Navbar -->
-  <!-- Header Section with Dark Navbar -->
-<header>
-  <nav class="p-4">
-    <div class="container mx-auto flex justify-between items-center">
-      <a class="text-xl font-bold" href="#">DELHI-ZENITHS</a>
-      <div class="flex items-center space-x-2">
-        <input type="text" id="locationSearch" class="form-input rounded-l p-2" placeholder="Search a location..." />
-        <button id="searchButton" class="btn btn-primary"><i class="fas fa-search"></i> Search</button>
+  <header>
+    <nav class="p-4">
+      <div class="container mx-auto flex justify-between items-center">
+        <a class="text-xl font-bold" href="#">DELHI-ZENITHS</a>
+        <div class="flex items-center space-x-2">
+          <input type="text" id="locationSearch" class="form-input rounded-l p-2" placeholder="Search a location..." />
+          <button id="searchButton" class="btn btn-primary"><i class="fas fa-search"></i> Search</button>
+        </div>
+        <ul class="flex items-center space-x-2">
+          <li>
+            <button class="btn btn-yellow" data-bs-toggle="modal" data-bs-target="#suggestModal"><i class="fas fa-map-marker-alt"></i> Suggest Locations</button>
+          </li>
+          <li>
+            <button class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#loginModal"><i class="fas fa-sign-in-alt"></i> Login</button>
+          </li>
+          <li>
+            <button class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#signupModal"><i class="fas fa-user-plus"></i> Sign Up</button>
+          </li>
+          <li>
+            <button id="pointsButton" class="btn btn-teal">Points: 0</button>
+          </li>
+        </ul>
       </div>
-      <ul class="flex items-center space-x-2">
-        <li>
-          <button class="btn btn-yellow" data-bs-toggle="modal" data-bs-target="#suggestModal"><i class="fas fa-map-marker-alt"></i> Suggest Locations</button>
-        </li>
-        <li>
-          <button class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#loginModal"><i class="fas fa-sign-in-alt"></i> Login</button>
-        </li>
-        <li>
-          <button class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#signupModal"><i class="fas fa-user-plus"></i> Sign Up</button>
-        </li>
-        <li>
-          <button id="pointsButton" class="btn btn-teal">Points: 0</button>
-        </li>
-      </ul>
-    </div>
-  </nav>
-</header>
+    </nav>
+  </header>
 
   <!-- Map Container -->
   <div id="map" class="animate__animated animate__fadeIn" style="height: 500px;"></div>
@@ -207,7 +205,7 @@
               <label for="loginPassword" class="block">Password</label>
               <input type="password" class="form-input border rounded w-full" id="loginPassword" required>
             </div>
-            <button type="submit" class="btn btn-primary mt-3">Login</button>
+            <button type="submit" class="btn btn-green mt-3">Login</button>
           </form>
         </div>
       </div>
@@ -225,10 +223,6 @@
         <div class="modal-body">
           <form id="signupForm">
             <div class="mb-4">
-              <label for="signupName" class="block">Name</label>
-              <input type="text" class="form-input border rounded w-full" id="signupName" required>
-            </div>
-            <div class="mb-4">
               <label for="signupEmail" class="block">Email</label>
               <input type="email" class="form-input border rounded w-full" id="signupEmail" required>
             </div>
@@ -236,24 +230,25 @@
               <label for="signupPassword" class="block">Password</label>
               <input type="password" class="form-input border rounded w-full" id="signupPassword" required>
             </div>
-            <button type="submit" class="btn btn-primary mt-3">Sign Up</button>
+            <div class="mb-4">
+              <label for="signupConfirmPassword" class="block">Confirm Password</label>
+              <input type="password" class="form-input border rounded w-full" id="signupConfirmPassword" required>
+            </div>
+            <button type="submit" class="btn btn-green mt-3">Sign Up</button>
           </form>
         </div>
       </div>
     </div>
   </div>
 
-  <!-- Leaflet JS -->
+  <!-- Bootstrap and Leaflet JS -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script src="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.js"></script>
   <script src="https://unpkg.com/leaflet.markercluster/dist/leaflet.markercluster.js"></script>
   <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
 
-  <!-- Bootstrap JS -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
-
-  <!-- Custom JS -->
+  <!-- Custom Script -->
   <script src="script.js"></script>
-
 </body>
 </html>
