--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@
     /* Map container */
     #map {
       background-color: #181818;
-      height: 500px; /* Fixed height for better layout */
     }
 
     /* Footer */
@@ -112,13 +111,13 @@
   <!-- Header Section with Dark Navbar -->
   <header>
     <nav class="p-4">
-      <div class="container mx-auto flex justify-between items-center flex-wrap">
+      <div class="container mx-auto flex justify-between items-center">
         <a class="text-xl font-bold" href="#">DELHI-ZENITHS</a>
-        <div class="flex items-center space-x-2 w-full md:w-auto">
+        <div class="flex items-center space-x-2">
           <input type="text" id="locationSearch" class="form-input rounded-l p-2" placeholder="Search a location..." />
           <button id="searchButton" class="btn btn-primary"><i class="fas fa-search"></i> Search</button>
         </div>
-        <ul class="flex items-center space-x-2 w-full md:w-auto mt-2 md:mt-0">
+        <ul class="flex items-center space-x-2">
           <li>
             <button class="btn btn-yellow" data-bs-toggle="modal" data-bs-target="#suggestModal"><i class="fas fa-map-marker-alt"></i> Suggest Locations</button>
           </li>
@@ -137,7 +136,7 @@
   </header>
 
   <!-- Map Container -->
-  <div id="map" class="animate__animated animate__fadeIn"></div>
+  <div id="map" class="animate__animated animate__fadeIn" style="height: 500px;"></div>
 
   <!-- Directions Button -->
   <div id="directionsContainer" class="mt-3 text-center hidden">
@@ -147,7 +146,7 @@
   <!-- Footer Section with Zoom Controls -->
   <footer class="text-center p-3">
     <div class="container mx-auto">
-      <div class="flex justify-center flex-wrap space-x-2">
+      <div class="flex justify-center space-x-2">
         <button id="zoomIn" class="btn btn-green"><i class="fas fa-plus"></i> Zoom In</button>
         <button id="zoomOut" class="btn btn-red"><i class="fas fa-minus"></i> Zoom Out</button>
         <button id="locateMe" class="btn btn-teal"><i class="fas fa-location-arrow"></i> Locate Me</button>
@@ -213,7 +212,7 @@
     </div>
   </div>
 
-  <!-- Modal for Signup -->
+  <!-- Modal for Sign Up -->
   <div class="modal fade" id="signupModal" tabindex="-1" aria-labelledby="signupModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -231,6 +230,10 @@
               <label for="signupPassword" class="block">Password</label>
               <input type="password" class="form-input border rounded w-full" id="signupPassword" required>
             </div>
+            <div class="mb-4">
+              <label for="signupConfirmPassword" class="block">Confirm Password</label>
+              <input type="password" class="form-input border rounded w-full" id="signupConfirmPassword" required>
+            </div>
             <button type="submit" class="btn btn-green mt-3">Sign Up</button>
           </form>
         </div>
@@ -238,46 +241,14 @@
     </div>
   </div>
 
-  <!-- Leaflet JS -->
+  <!-- Bootstrap and Leaflet JS -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script src="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.js"></script>
   <script src="https://unpkg.com/leaflet.markercluster/dist/leaflet.markercluster.js"></script>
   <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
 
-  <script>
-    // Initialize your Leaflet map here
-    const map = L.map('map').setView([28.6139, 77.2090], 12); // Set to Delhi coordinates
-
-    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-      maxZoom: 19,
-      attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
-    }).addTo(map);
-
-    // Example functions to handle buttons (implement according to your needs)
-    document.getElementById('searchButton').onclick = function() {
-      const location = document.getElementById('locationSearch').value;
-      alert('Searching for: ' + location);
-      // Implement search logic here
-    };
-
-    document.getElementById('getDirections').onclick = function() {
-      alert('Getting directions...');
-      // Implement directions logic here
-    };
-
-    document.getElementById('zoomIn').onclick = function() {
-      map.zoomIn();
-    };
-
-    document.getElementById('zoomOut').onclick = function() {
-      map.zoomOut();
-    };
-
-    document.getElementById('locateMe').onclick = function() {
-      // Implement locate me logic here
-      alert('Locating...');
-    };
-  </script>
+  <!-- Custom Script -->
+  <script src="script.js"></script>
 </body>
 </html>
